# airplane_mode

./: README.md  pyproject.toml
airplane_mode/: api.py  hooks.py  modules.txt  tasks.py
airplane_mode/airplane/doctype/airline/: airline.js  airline.json  airline.py  test_airline.py
airplane_mode/airplane/doctype/airplane/: airplane.js  airplane.json  airplane.py  test_airplane.py
airplane_mode/airplane/doctype/airplane_flight/: airplane_flight.js  airplane_flight.json  airplane_flight.py  test_airplane_flight.py
airplane_mode/airplane/doctype/airplane_ticket/: airplane_ticket.js  airplane_ticket.json  airplane_ticket.py  test_airplane_ticket.py
airplane_mode/airplane/doctype/airplane_ticket_add_on_item/: airplane_ticket_add_on_item.json  airplane_ticket_add_on_item.py
airplane_mode/airplane/doctype/airplane_ticket_add_on_type/: airplane_ticket_add_on_type.js  airplane_ticket_add_on_type.json  airplane_ticket_add_on_type.py  test_airplane_ticket_add_on_type.py
airplane_mode/airplane/doctype/airport/: airport.js  airport.json  airport.py  test_airport.py
airplane_mode/public/css/: airports-details.css  airports.css  base.css  home.css  shop.css  singleShop.css
airplane_mode/public/js/: airports-details.js  airports.js  shop.js  singleShop.js
airplane_mode/templates/pages/: base.html  show_me_color.html
airplane_mode/www/airports/: [airports].html  [airports].py  index.html  index.py
airplane_mode/www/home/: index.html
airplane_mode/www/shops/: [shop_id].html  [shop_id].py  index.html  index.py
(+36 files in other folders)
