[project]
name = "airplane_mode"
authors = [
    { name = "Rajneesh yadav", email = "rajneeshyadav1107@gmail.com"}
]
description = "This is airplane app for all the details about planes timing tickes and other stuffs "
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
